data/derived/comb/progs/unify/prog5803.ml.out
Characters 65-101:
  | h::t -> bigMul((mulByDigit h l2), (bigMul(t, l2)));;
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
